[package]
name = "laser_pointer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.3", features = ["derive"] }
winit = "0.29.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
local-ip-addr = "0.1.1"
igd = "0.12.1"
ctrlc = "3.4.2"