[package]
name = "laser_pointer"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.3", features = ["derive"] }
winit = "0.29.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
local-ip-addr = "0.1.1"
igd-next = "0.14.3"
ctrlc = "3.4.2"
softbuffer = "0.4.1"
hex = "0.4.3"
image = "0.24.9"
rand = "0.8.5"
laminar = "0.5.0"
shellexpand = "3.1.0"