[package]
name = "laser_pointer"
version = "1.0.0"
edition = "2021"
description = "An app that lets you point on your friends screen."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.3", features = ["derive"] }
winit = "0.29.13"
egui-winit = "0.26.2"
egui = "0.26.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
local-ip-addr = "0.1.1"
ctrlc = "3.4.2"
softbuffer = "0.4.1"
hex = "0.4.3"
image = "0.24.9"
rand = "0.8.5"
shellexpand = "3.1.0"
steamworks = "0.11.0"